--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script>
     financeCalculator({
       target: "#calculator_container",
-      config: "js/pbf-config.json",
+      config: "pbf-config.json",
       labels: {
         service: "Select Finance Service",
         term: "Select Repayment Term",
